# cute_ir

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  README_AMD_ROCM.md  README_DOCKER.md  build.sh  build_in_docker.sh  build_llvm.sh  docker_shell.sh  run_tests.sh  setup.py  test_in_docker.sh
docs/: AMD_ROCM_SUPPORT.md  API_INTEGRATION.md  ARCHITECTURE.md  INSTALL.md  PASSES_SUMMARY.md  PROJECT_SUMMARY.md  PassPipeline.md  cute_ir.md  ir_def.md
examples/: cute_gemm_example.mlir
examples/gpu/gemm/: MFMA_PROGRESS_SUMMARY.md  README_MFMA_TESTS.md  test_mfma_gemm_data.py  test_mfma_gemm_v2.py
include/cute/: CuteDialect.td  CuteNvgpuDialect.td  CuteNvgpuOps.td  CuteOps.td  CutePasses.td  CuteRocmDialect.td  CuteRocmOps.td
include/rocir/: RocirDialect.h  RocirOps.h  RocirOps.td  RocirPasses.h  RocirPasses.td  RocirPython.td  RocirRocmDialect.h  RocirRocmDialect.td  RocirRocmOps.h  RocirRocmOps.td  RocirTypes.h
lib/Dialect/Rocir/: CMakeLists.txt  RocirDialect.cpp  RocirTypes.cpp
lib/Dialect/RocirRocm/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  CuteNvgpuToNvgpu.cpp  CuteToRocm.cpp  CuteToStandard.cpp  RocirLayoutCanonicalize.cpp  RocirRocmToGPU.cpp  RocirToRocm.cpp  RocirToStandard.cpp
python/cute_runtime/: __init__.py  bindings.cpp
python/examples/: test_gemm.py
python/rocdsl/: __init__.py  cute_opt_runner.py  passes.py  rocir_opt_runner.py
python/rocdsl/compiler/: __init__.py  context.py  pipeline.py
python/rocdsl/dialects/ext/: __init__.py  arith.py  cute.py  func.py  gpu.py  rocir.py  scf.py
python/rocdsl/utils/: smem_allocator.py
python_bindings/: CMakeLists.txt  CuteDialectModule.cpp  CutePassesModule.cpp  RocirPassesModule.cpp  cute.py  rocir.py
runtime/: CMakeLists.txt
runtime/include/: cute_runtime.h
runtime/src/: cute_runtime.cpp  cute_runtime_hip.cpp
tests/: README.md  test_layout.mlir  test_layout_amd.mlir  test_size.mlir  utils.py
tests/benchmark/: matrixTranspose.py  per_token_quant_benchmark.py  vecAdd.py
tests/examples/gpu/gemm/: test_mfma_binding.py  test_mfma_python_api.py
tests/mlir/: test_all_ops.mlir  test_basic.mlir  test_chained.mlir  test_chained_operations.mlir  test_composition.mlir  test_coord_lowering.mlir  test_cosize.mlir  test_crd2idx.mlir  test_get.mlir  test_idx2crd.mlir  test_layout.mlir  test_layout_amd.mlir  test_ops.mlir  test_pass.mlir  test_product_divide.mlir  test_rank.mlir  test_simple.mlir
tests/python/: README.md  TESTING.md  __init__.py  conftest.py  test_arith_operators.py  test_basic_ops.py  test_cute_basic.py  test_cute_divide.py  test_cute_local.py  test_cute_product.py  test_gpu_rocdsl.py  test_local_ops.py  test_passes.py  test_product_divide.py  test_rocir_coord_ops.py
tests/python/examples/: demo_operator_overload.py  test_gpu_gemm.py
tests/python/gpu/: test_eltwise_add.py  test_gpu_layout.py  test_gpu_rocdsl.py  test_gpu_simple.py  test_gpu_with_rocir_coords.py  test_layernorm.py  test_mfma_gemm_fp8_python_api.py  test_mfma_gemm_fp8_rocir.py  test_mfma_gemm_fp8_rocir_preshuffle.py  test_mfma_gemm_real.py  test_mfma_gemm_real_python_api.py  test_mfma_simple_working.py  test_rmsnorm.py  test_shared_working.py  test_softmax.py  utils.py
tests/python/ir/: test_basic_ops.py  test_layout_algebra.py  test_local_ops.py  test_nested_layouts.py  test_product_divide.py  test_rocir_basic.py  test_rocir_divide.py  test_rocir_local.py  test_rocir_print.py  test_rocir_product.py  test_static_vs_dynamic.py
tools/rocir-opt/: rocir-opt.cpp
